7058689: Tiered: Reprofiling doesn't happen in presence of level 4 OSR methods

Take into account current state of profiling before believing that existing higher level versions are valid

Reviewed-by: kvn, never